--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "lucide-react": "^0.314.0",
     "moment": "^2.30.1",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
